# llm-council

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  RALPH_PROMPT.md  README.md  UNTESTABLE_CODE.md  council-deep-dive.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml
.beads/: .gitignore  issues.jsonl
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: beadspace.yml  claude.yml  docker.yml
backend/: arena.py  attachments.py  auth.py  config.py  council.py  council_stream.py  elo.py  export.py  logging_config.py  main.py  models.py  openrouter.py  rankings_storage.py  shutdown.py  storage.py  telemetry.py  version.py  websearch.py
backend/deliberation/: __init__.py  deliberation.py
backend/models/: __init__.py
docs/: auth-setup.md  research-realtime-improvements.md
docs/beadspace/: community-submission.md  index.html  issues.json
docs/field-reports/: review-loop-tactics.md  sentry-triage-cascade.md  sse-stream-resilience.md  zustand-tanstack-migration.md
docs/plans/: 2026-04-25-council-standings.md  beads-completion-plan.md  frontend-refactor.md  unify-rounds.md
docs/roadmap/: ideas.md  research.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/docs/roadmap/: ideas.md
frontend/public/: site.webmanifest
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/__tests__/: fetchHelpers.test.js  formatting.test.js  messageUtils.test.js  modelErrors.test.js  models.test.js  retryStage3.test.js  retrySynthesis.test.js  roundUtils.test.js  seatColors.test.js  sidebarUtils.test.js  sse.test.js
frontend/src/components/: ArenaMode.css  ArenaMode.jsx  ArenaRound.css  ArenaRound.jsx  ArenaSynthesis.css  ArenaSynthesis.jsx  ChatInterface.css  Round.css  (+26 more)
skills/onboard/: SKILL.md
tests/: conftest.py  test_attachments.py  test_auth.py  test_council.py  test_council_stream.py  test_elo.py  test_export.py  test_openrouter.py  test_query_model.py  test_rankings_api.py  test_rankings_storage.py  test_retry_stage3.py  test_shutdown.py  test_stage3.py  test_storage.py  test_websearch.py
tui/: api.py  app.py
(+32 files in other folders)
